# Project-E-Star-homework

./: .gitignore  CMakeLists.txt  README.md
bgfx/examples/common/: bgfx_utils.cpp  example-glue.cpp
cmake/: bgfx.cmake  bx.cmake  examples.cmake  homework.cmake
cmake/tools/: geometryv.cmake  texturev.cmake
homework/: BaseMaterial.cpp  BaseMaterial.h  BlinnPhongMaterial.cpp  BlinnPhongMaterial.h  Camera.h  CubeMesh.cpp  CubeMesh.h  DirectionalLight.h  IBLMaterial.cpp  IBLMaterial.h  IMaterial.cpp  IMaterial.h  IMesh.cpp  IMesh.h  InputLayout.cpp  InputLayout.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h  Level4.cpp  Level4.h  Level5.cpp  Level5.h  LightProbe.h  MyApp.cpp  MyApp.h  PBRMaterial.cpp  PBRMaterial.h  PBRMesh.cpp  PBRMesh.h  ShadowMaterial.cpp  ShadowMaterial.h  SkyMaterial.cpp  SkyMaterial.h  SkyboxMesh.cpp  SkyboxMesh.h  homework.cpp
homework/HomeworkCommon/: Camera.h  DirectionalLight.h  LightProbe.h
resource/basic_meshes/: README.md
resource/pbr_stone/: README.md  pbr_stone_aorm.dds  pbr_stone_aorm.tga  pbr_stone_base_color.dds  pbr_stone_base_color.tga  pbr_stone_normal.dds  pbr_stone_normal.tga
resource/shaders/sc/cubes_blinnphong/: varying.def.sc
shaders/dx11/: fs_cubes_PBR_withShadow.glsl
shaders/sc/: compile.txt  fs_IBL.glsl  fs_PBR.glsl  fs_blinnphong.glsl  varying.def.sc  vs_IBL.glsl  vs_blinnphong.glsl  vs_blinnphong_withShadow.glsl
shaders/sc/IBL/: fs_IBL.glsl  fs_IBL_withShadow.glsl  varying.def.sc  vs_IBL.glsl
shaders/sc/PBR/: fs_PBR.glsl  fs_PBR_withShadow.glsl  vs_PBR_withShadow.glsl
shaders/sc/blinnphong/: fs_blinnphong.glsl  fs_blinnphong_withShadow.glsl
shaders/sc/cubes/: vs_cubes_blinnphong.glsl
shaders/sc/cubes_IBL/: fs_cubes_IBL.glsl  fs_cubes_IBL_skybox.glsl  vs_cubes_IBL_skybox.glsl
shaders/sc/cubes_PBR/: fs_cubes_PBR.glsl  varying.def.sc  vs_cubes_PBR.glsl
shaders/sc/cubes_blinnphong/: fs_cubes_blinnphong.glsl  vs_cubes_blinnphong.glsl
shaders/sc/shadow/: shadow.glsl  varying.def.sc  vs_shadow.glsl
tools/: GGX_E_LUT.dds
